client/scss/finder-admin.scss
@use "dropdown";
@use "menubar";
@use "dialog";
@use "downshift";
@use "sass:meta";
@use "colors";
@use "progress";
@use "tooltip";
@use "volume-control";

// messagelist appears after saving a file
ul.messagelist {
	position: relative;
	z-index: 1;
	&.fade-out {
		opacity: 1;
		animation: fade-out-animate 1s linear 4s 1;
	}

	@keyframes fade-out-animate {
		100% {
			opacity: 0;
		}
	}
}

.content {
	position: relative;
}

#content:has(#content-react) {
	padding: 0;
	h1 {
		margin: 10px 20px;
	}
}

#content-start {
	background: var(--darkened-bg);
}
/* ... */

